# linkping

./: .gitignore  Cargo.toml  Makefile  docker-compose.yml
migrations/: 20250617125746_create_link.sql  20250617141953_alter_link.sql
src/: db.rs  main.rs
src/config/: mod.rs
src/errors/: mod.rs
src/models/: analytics.rs  click.rs  link.rs  mod.rs
src/routes/: analytics.rs  link.rs  mod.rs  shorten.rs
src/services/: analytics.rs  link.rs  mod.rs
src/streams/: consumer.rs  mod.rs  producer.rs  retry.rs
src/validation/: url.rs
