[package]
name = "linkping"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid", "chrono"] }
nanoid = "0.4.0"
validator ={ version = "0.20.0", features = ["derive"] }
url = "2.5.0"
humantime = "2.1"
chrono = { version = "0.4", features = ["serde"] }
redis = {version = "0.32.1", features = ["tokio-comp"] }
anyhow = "1.0.98"
futures = "0.3.28"

[dev-dependencies]
cargo-watch = "8.5"
